# 24b-emb-projeto-noonoo_lapolisia

./: CMakeLists.txt
dht11/: CMakeLists.txt  dht11.c  dht11.h
lcd/: CMakeLists.txt  lcd.c  lcd.h
ldr/: CMakeLists.txt  ldr.c  ldr.h
lm35/: CMakeLists.txt  lm35.c  lm35.h
main/: CMakeLists.txt  main.c  main.h
